--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   </div>
     <div class="p-4">
      <h3 class="text-base font-bold mb-2 text-gray-800">Dini Wulaningtyas, S. Kom</h3>
-  <p class="text-gray-600 mb-2 text-xs">SMKN 1 Gombong</p><a href="https://online.pubhtml5.com/sqnph/tyjn/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
+  <p class="text-gray-600 mb-2 text-xs">SMKN 1 Gombong Kebumen</p><a href="https://online.pubhtml5.com/sqnph/tyjn/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
     </div>
    </div><!-- Portfolio Card 6 -->
   <div class="card-hover bg-white rounded-lg overflow-hidden shadow-lg border border-gray-100 hover:shadow-2xl">
@@ -602,3 +602,4 @@
   </script>
 </body>
 </html>
+
