--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
   </div>
     <div class="p-4">
      <h3 class="text-base font-bold mb-2 text-gray-800">R. Hartanto, S.T</h3>
-  <p class="text-gray-600 mb-2 text-xs">SMKN</p><a href="https://online.fliphtml5.com/rharta/mytu/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
+  <p class="text-gray-600 mb-2 text-xs">SMK IPIEMS</p><a href="https://online.fliphtml5.com/rharta/mytu/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
     </div>
    </div><!-- Portfolio Card 13 -->
    <div class="card-hover bg-white rounded-lg overflow-hidden shadow-lg border border-gray-100 hover:shadow-2xl">
@@ -602,5 +602,6 @@
   </script>
 </body>
 </html>
+
 
 
