--- a/index.html
+++ b/index.html
@@ -110,7 +110,15 @@
   <img src="7.jpg" alt="Slide 7" class="w-full h-full object-contain md:object-cover" loading="lazy" />
   </div>
     </div><!-- Navigation Dots -->
-  <div class="absolute bottom-4 md:bottom-8 left-1/2 transform -translate-x-1/2 flex space-x-3"><button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-100 transition-opacity duration-300 shadow-lg" data-slide="0"></button> <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="1"></button> <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="2"></button> <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="3"></button> <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="4"></button>
+ <div class="absolute bottom-4 md:bottom-8 left-1/2 transform -translate-x-1/2 flex space-x-3">
+    <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-100 transition-opacity duration-300 shadow-lg" data-slide="0"></button>
+    <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="1"></button>
+    <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="2"></button>
+    <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="3"></button>
+    <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="4"></button>
+    <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="5"></button>
+    <button class="carousel-dot w-4 h-4 rounded-full bg-white opacity-50 transition-opacity duration-300 shadow-lg" data-slide="6"></button>
+  </div>
   </div><!-- Navigation Arrows --> <button id="prev-btn" class="absolute left-4 md:left-8 top-1/2 transform -translate-y-1/2 w-10 md:w-12 h-10 md:h-12 bg-white bg-opacity-20 hover:bg-opacity-30 rounded-full flex items-center justify-center text-white text-2xl transition-all duration-300 shadow-lg"> ‹ </button> <button id="next-btn" class="absolute right-4 md:right-8 top-1/2 transform -translate-y-1/2 w-10 md:w-12 h-10 md:h-12 bg-white bg-opacity-20 hover:bg-opacity-30 rounded-full flex items-center justify-center text-white text-2xl transition-all duration-300 shadow-lg"> › </button>
    </div>
   </section><!-- Portfolio Section -->
@@ -608,6 +616,7 @@
   </script>
 </body>
 </html>
+
 
 
 
