--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
   <div class="carousel-slide absolute inset-0 bg-white flex items-center justify-center transition-opacity duration-500 opacity-0">
   <img src="5.jpg" alt="Slide 5" class="w-full h-full object-contain md:object-cover" loading="lazy" />
   </div>
-     <div class="carousel-slide absolute inset-0 bg-white flex items-center justify-center transition-opacity duration-500 opacity-0">
+  <!-- Image 6 -->
+  <div class="carousel-slide absolute inset-0 bg-white flex items-center justify-center transition-opacity duration-500 opacity-0">
   <img src="6.jpg" alt="Slide 6" class="w-full h-full object-contain md:object-cover" loading="lazy" />
   </div>
-     <div class="carousel-slide absolute inset-0 bg-white flex items-center justify-center transition-opacity duration-500 opacity-0">
+  <!-- Image 7 -->
+  <div class="carousel-slide absolute inset-0 bg-white flex items-center justify-center transition-opacity duration-500 opacity-0">
   <img src="7.jpg" alt="Slide 7" class="w-full h-full object-contain md:object-cover" loading="lazy" />
   </div>
     </div><!-- Navigation Dots -->
@@ -616,6 +618,7 @@
   </script>
 </body>
 </html>
+
 
 
 
