--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   </div>
     <div class="p-4">
      <h3 class="text-base font-bold mb-2 text-gray-800">Dian Riklas Bagia, S.Kom</h3>
-  <p class="text-gray-600 mb-2 text-xs">SMKN 1 Kota Serang</p><a href="https://online.fliphtml5.com/rharta/gooj/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
+  <p class="text-gray-600 mb-2 text-xs">SMKN 1 Kota Serang</p><a href="https://online.pubhtml5.com/sqnph/hzeu/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
     </div>
    </div><!-- Portfolio Card 9 -->
   <div class="card-hover bg-white rounded-lg overflow-hidden shadow-lg border border-gray-100 hover:shadow-2xl">
@@ -233,7 +233,7 @@
   </div>
     <div class="p-4">
      <h3 class="text-base font-bold mb-2 text-gray-800">Muh. Irfan Basri, S. Pd</h3>
-  <p class="text-gray-600 mb-2 text-xs">SMKN 7 Bone</p><a href="https://online.fliphtml5.com/rharta/ekpk/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
+  <p class="text-gray-600 mb-2 text-xs">SMKN 7 Bone</p><a href="https://online.pubhtml5.com/sqnph/colo/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
     </div>
    </div><!-- Portfolio Card 12 -->
   <div class="card-hover bg-white rounded-lg overflow-hidden shadow-lg border border-gray-100 hover:shadow-2xl">
@@ -242,7 +242,7 @@
   </div>
     <div class="p-4">
      <h3 class="text-base font-bold mb-2 text-gray-800">R. Hartanto, S.T</h3>
-  <p class="text-gray-600 mb-2 text-xs">SMK IPIEMS</p><a href="https://online.fliphtml5.com/rharta/mytu/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
+  <p class="text-gray-600 mb-2 text-xs">SMK IPIEMS</p><a href="https://online.pubhtml5.com/sqnph/xidy/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
     </div>
    </div><!-- Portfolio Card 13 -->
    <div class="card-hover bg-white rounded-lg overflow-hidden shadow-lg border border-gray-100 hover:shadow-2xl">
@@ -251,7 +251,7 @@
   </div>
     <div class="p-4">
      <h3 class="text-base font-bold mb-2 text-gray-800">Jujuk Irawan, S. Sn</h3>
-  <p class="text-gray-600 mb-2 text-xs">SMKN 3 Batu</p><a href="https://online.fliphtml5.com/rharta/epum/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
+  <p class="text-gray-600 mb-2 text-xs">SMKN 3 Batu</p><a href="https://online.pubhtml5.com/sqnph/kinz/" target="_blank" rel="noopener noreferrer" class="w-full inline-block text-center bg-purple-600 text-white py-1.5 px-3 text-sm rounded-md hover:bg-purple-700 transition duration-300">View Details</a>
     </div>
    </div><!-- Portfolio Card 14 -->
    <div class="card-hover bg-white rounded-lg overflow-hidden shadow-lg border border-gray-100 hover:shadow-2xl">
@@ -618,6 +618,7 @@
   </script>
 </body>
 </html>
+
 
 
 
